--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -12,7 +12,7 @@
 <div>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link" href="#">Sign Up</a>
+            <a class="nav-item nav-link" href="#">Sigasdn Up</a>
             <a class="nav-item nav-link" href="#">Login</a>
         </div>
     </div>
