--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -12,8 +12,9 @@
 <div>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link" href="#">Sigasdn Up</a>
-            <a class="nav-item nav-link" href="#">Login</a>
+            <%= link_to "Sign Up", new_user_registration_path, class:"navbar-brand" %>
+            <%= link_to "Login",  user_session_path, class:"navbar-brand" %>
+            <%= link_to "Sign Out", destroy_user_session_path,method: :delete, class:"navbar-brand" %>
         </div>
     </div>
 </div>
