--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -12,9 +12,26 @@
 <div>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <%= link_to "Sign Up", new_user_registration_path, class:"navbar-brand" %>
-            <%= link_to "Login",  user_session_path, class:"navbar-brand" %>
-            <%= link_to "Sign Out", destroy_user_session_path,method: :delete, class:"navbar-brand" %>
+            <ul class="navbar-nav">
+            <% if user_signed_in? %>
+            <li class="d-flex flex-column justify-content-center">
+                <div>Welcome, <%= current_user.email %>!</div> 
+            </li>
+            <li class="nav-item">
+               <%= button_to 'Sign Out', destroy_user_session_path, method: :delete, form: { data: { turbo_confirm: "Are you sure you want to logout?" }}, class:"btn btn-lg btn-primary mr-sm-2" %>
+            </li>
+            <li class="nav-item">
+                <%= link_to 'Edit Profile',  edit_user_registration_path, class:"btn btn-lg btn-primary mr-sm-2" %>
+            </li>
+            <% else %>
+            <li class="nav-item active">
+                <%= link_to 'Sign Up', new_user_registration_path, class:"btn btn-lg btn-primary mr-sm-2" %>
+            </li>
+            <li class="nav-item">
+                <%= link_to 'Sign In', new_user_session_path, class:"btn btn-lg btn-primary mr-sm-2" %>
+            </li>
+            <% end %>
+            </ul>            
         </div>
     </div>
 </div>
