--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,17 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>Tutorapplication</title>
+  <title>Tutorapplication</title>
   </head>
   <body>
   <%= render 'home/header'%>
-  
-  <div class="container>
+  <div class="container">
+      <% if notice %>
+        <p class="notice alert alert-info" role="alert"><%= notice.html_safe %></p>
+      <% end %>
+      <% if alert %>
+        <p class="alert alert-danger" role="alert"><%= alert.html_safe %></p>
+      <% end %>
     <%= yield %>
   </div>
     <!-- Optional JavaScript -->
