--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -23,6 +23,12 @@
             <li class="nav-item">
                 <%= link_to 'Edit Profile',  edit_user_registration_path, class:"btn btn-lg btn-primary mr-sm-2" %>
             </li>
+            <li class="nav-item">
+                <%= link_to 'View our tutor',  tutor_creations_path, class:"btn btn-lg btn-primary mr-sm-2" %>
+            </li>
+            <li class="nav-item">
+                <%= link_to 'Become a tutor', new_tutor_creation_path, class:"btn btn-lg btn-primary mr-sm-2" %>
+            </li>
             <% else %>
             <li class="nav-item active">
                 <%= link_to 'Sign Up', new_user_registration_path, class:"btn btn-lg btn-primary mr-sm-2" %>
