--- a/app/views/tutor_creations/show.html.erb
+++ b/app/views/tutor_creations/show.html.erb
@@ -3,8 +3,28 @@
 <%= render @tutor_creation %>
 
 <div>
-  <%= link_to "Edit this tutor creation", edit_tutor_creation_path(@tutor_creation) %> |
-  <%= link_to "Back to tutor creations", tutor_creations_path %>
 
+  <%= link_to "Edit this tutor creation", edit_tutor_creation_path(@tutor_creation) %>
+  <%= link_to "Back to tutor creations", tutor_creations_path %>
   <%= button_to "Destroy this tutor creation", @tutor_creation, method: :delete %>
+
 </div>
+<br>
+
+<form id="checkout" method="post" action="/checkout">
+  <div id="payment-form"></div>
+  <input type="submit" value="Pay $<%= @tutor_creation.price %>">
+</form>
+
+<script src="https://js.braintreegateway.com/js/braintree-2.20.0.min.js"></script>
+<script>
+// We generated a client token for you so you can test out this code
+// immediately. In a production-ready integration, you will need to
+// generate a client token on your server (see section below).
+var clientToken = "<%= @token %>";
+
+braintree.setup(clientToken, "dropin", {
+  container: "payment-form"
+});
+</script>
+
