--- a/app/views/tutor_creations/_form.html.erb
+++ b/app/views/tutor_creations/_form.html.erb
@@ -38,6 +38,11 @@
   </div>
 
   <div>
+    <%= form.label :photo  %>
+    <%= form.file_field :photo %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
