--- a/app/views/tutor_creations/_tutor_creation.html.erb
+++ b/app/views/tutor_creations/_tutor_creation.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id tutor_creation %>">
+<div id="<%= dom_id tutor_creation %>" class="p-3 mb-2 bg-secondary text-white">
   <p>
     <strong>User:</strong>
     <%= tutor_creation.user_id %>
