--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="container-fluid p-5 bg-light bg-gradient mt-5 mb-5">
+<h1>Tutoring App</h1>
+<p class="fs-3">This is a tutoring application that anyone can apply for and be tutored by them</p>
+</div>
+
