--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%# javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+    <% javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -17,7 +17,7 @@
   </head>
   <body>
   <%= render 'home/header'%>
-  <div class="container">
+  <div class="container-md">
       <% if notice %>
         <p class="notice alert alert-info" role="alert"><%= notice.html_safe %></p>
       <% end %>
